--- a/src/navbar/index.html
+++ b/src/navbar/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" class="scroll-smooth dark">
+<html lang="de" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,7 @@
       <div class="flex justify-between items-center">
         <div>
           <div
-            class="flex items-center justify-center cursor-pointer p-2 rounded-full hover:bg-blue-600 hover:text-white duration-500"
+            class="flex items-center justify-center cursor-pointer p-2 rounded-full hover:bg-slate-200 dark:hover:text-black"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -34,5 +34,8 @@
         <h1 class="p-2 text-black dark:text-white text-2xl font-bold">Logo</h1>
       </div>
     </nav>
+    <!-- <div
+      class="h-screen bg-gradient-to-b from-cyan-400 to-blue-500 dark:from-cyan-600 dark:to-blue-700"
+    ></div> -->
   </body>
 </html>
