--- a/src/sidebar/index.html
+++ b/src/sidebar/index.html
@@ -26,12 +26,12 @@
       </button>
       <!-- Handy Sidebar -->
       <article
-        class="bg-gradient-to-b z-20 top-0 left-0 fixed h-screen md:hidden from-cyan-400 to-blue-500 dark:from-cyan-600 dark:to-blue-700 -translate-x-full w-3/4 peer-focus:translate-x-0 duration-700 rounded-r-xl shadow-2xl peer-focus:shadow-black text-white"
+        class="bg-gradient-to-b z-20 top-0 left-0 fixed h-screen md:hidden from-cyan-400 to-blue-500 dark:from-cyan-600 dark:to-blue-700 -translate-x-full w-3/4 peer-focus:translate-x-0 duration-700 rounded-r-xl shadow-2xl peer-focus:shadow-black text-white overflow-y-scroll"
       >
-        <div class="p-2 flex flex-col">
+        <div class="p-2 flex flex-col h-screen">
           <a class="text-2xl font-bold mb-3 pl-3 pt-2 pb-2" href="#">Logo</a>
           <hr class="text-white mb-4" />
-          <div class="mb-4">
+          <div class="mb-4 flex-grow">
             <div class="pl-2 mb-1">
               <a
                 href="#"
@@ -181,7 +181,7 @@
                 <p class="pl-6">Reports</p>
               </a>
               <div class="mt-8 font-medium text-sm">
-                <p>Your Teams</p>
+                <p class="mb-2">Your Teams</p>
                 <a
                   href="#"
                   class="p-2 font-medium hover:bg-slate-200 hover:bg-opacity-40 hover:cursor-pointer rounded-md flex items-center"
@@ -251,7 +251,7 @@
               </div>
             </div>
           </div>
-          <div class="fixed bottom-0 w-full pl-2 pr-4 mb-6">
+          <div class="w-full pl-2 pr-4 mb-6">
             <a
               href="#"
               class="p-2 font-medium hover:bg-slate-200 hover:bg-opacity-40 hover:cursor-pointer rounded-md flex items-center"
