deleted test html

--- a/src/sidebar/index.html
+++ b/src/sidebar/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" class="scroll-smooth">
+<html lang="de" class="scroll-smooth dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,7 +26,7 @@
       </button>
       <!-- Handy Sidebar -->
       <aside
-        class="bg-gradient-to-b z-20 top-0 left-0 fixed h-screen md:hidden from-cyan-400 to-blue-500 dark:from-cyan-600 dark:to-blue-700 -translate-x-full w-3/4 peer-focus:translate-x-0 duration-700 rounded-r-xl shadow-2xl peer-focus:shadow-black text-white overflow-y-scroll"
+        class="bg-gradient-to-b z-20 top-0 left-0 fixed h-screen from-cyan-400 to-blue-500 dark:from-cyan-600 dark:to-blue-700 -translate-x-full w-72 peer-focus:translate-x-0 duration-700 rounded-r-xl shadow-2xl peer-focus:shadow-black text-white overflow-y-scroll"
       >
         <div class="p-2 flex flex-col h-screen">
           <a class="text-2xl font-bold mb-3 pl-3 pt-2 pb-2" href="#">Logo</a>
@@ -281,7 +281,6 @@
           </div>
         </div>
       </aside>
-      <!-- Medium Sidebar -->
 
       <!-- Example Text -->
     </main>
