--- a/HTML+CSS/src/sidebar/index.html
+++ b/HTML+CSS/src/sidebar/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/output.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Sidebar</title>
   </head>
   <body class="dark:bg-slate-950 dark:text-white">
